feat(fc-msa-traffic): add api automation testing
