# fc-msa-traffic/app/catalog/internal/catalog/model.go
@@ -1,6 +1,6 @@
 package catalog
 
-type ReserveStockRequest struct {
+type ReverseStockRequest struct {
 	ProductID string `json:"product_id" validate:"required"`
 	Quantity  int    `json:"quantity" validate:"required,min=1"`
 }
